native/desktop-macos/headers/desktop_macos.h

typedef struct Window Window;
typedef double LogicalPixels;
typedef struct LogicalPoint {
  LogicalPixels x;
  LogicalPixels y;
} LogicalPoint;
typedef struct LogicalSize {
  LogicalPixels width;
  LogicalPixels height;
} LogicalSize;
void dispatcher_main_exec_async(void (*f)(void));
struct LogicalPoint window_get_content_origin(const struct Window *window);
struct LogicalSize window_get_content_size(const struct Window *window);
void window_set_content_rect(const struct Window *window,
                             struct LogicalPoint origin,
                             struct LogicalSize size,
                             bool animate);
bool window_is_key(const struct Window *window);
bool window_is_main(const struct Window *window);
struct LogicalSize window_get_max_size(const struct Window *window);
void window_set_max_size(const struct Window *window, struct LogicalSize size);